Added game mode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,8 +46,10 @@ SoundCueCookQualityIndex=-1
 
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Mobile
-DefaultGraphicsPerformance=EGraphicsPreset::Scalable
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -196,6 +198,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/LindwyrmRoll")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/LindwyrmRoll")
+LocalPlayerClassName=/Script/BashCore.BashLocalPlayer
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
